<resources>
    <string name="app_name">SmartMath</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="UnitCv">UNIT CONVERTER</string>
    <string name="currency">Tiền tệ - Money</string>
    <string name="speed">Vận tốc - Speed</string>
    <string name="weight">Cân nặng - Weight</string>
    <string name="distance">Khoảng cách - Distance</string>
    <string name="temperature">Nhiệt độ - Temperature</string>
    <string name="angle">Góc - Angle</string>
    <string name="text_hint">Input Value Here</string>
    <string name="cal_title">CALCULATOR</string>

    <string name="set_lang">Ngôn ngữ</string>
    <string name="set_bg">Màu nền</string>
    <string name="set_size">Kích cỡ icon</string>

    <string name="GVHD">Giáo viên hướng dẫn:</string>
    <string name="TTV">Mr. Trần Thế Vũ</string>
    <string name="NDT">Mr. Nguyễn Đức Tài</string>
    <string name="product_dev">Sản phẩm được phát triển bởi: </string>
    <string name="memNDN">Nguyễn Đình Nhân</string>
    <string name="memNVS">Nguyễn Văn Sơn</string>
    <string name="memQHN">Quách Hùng Nam</string>
    <string name="memVTPN">Võ Thị Phước Ngọc</string>

</resources>
