<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.smartmath.SettingActivity">
    <LinearLayout
        android:id="@+id/llSetting"
        android:background="@color/bg1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/set_lang"
                android:textSize="@dimen/set_size"
                android:textColor="@color/Box_textcl"
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spnLang"
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>
        </LinearLayout>
        <LinearLayout
        android:layout_margin="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/set_bg"
            android:textSize="@dimen/set_size"
            android:textColor="@color/Box_textcl"
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spnBg"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>
        <LinearLayout
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/set_size"
                android:textSize="@dimen/set_size"
                android:textColor="@color/Box_textcl"
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spnSize"
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
